<resources>
    <string name="app_name">TARUC Quest</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_student_id">Student ID</string>
    <string name="prompt_telephone_no">Telephone No</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup">Sign Up</string>
    <string name="signupCaps"><u>SIGN UP</u></string>
    <string name="cancel">Cancel</string>
    <string name="keep_log">Keep me logged in</string>
    <string name="login_details">Login Details</string>
    <string name="user_details">User Details</string>
    <string name="title_activity_homescreen">TARUC Quest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_new_question">New Question</string>
    <string name="action_settings">Settings</string>
    <string name="show_all">Show All</string>
    <string name="academic">Academic</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="activity">Activity</string>
    <string name="relationship">Relationship</string>
    <string name="sports">Sports</string>
    <string name="news">News</string>
    <string name="games">Games</string>
    <string name="hobby">Hobby</string>
    <string name="others">Others</string>
    <string name="search_keywords">Search keywords</string>
    <string name="answer">Answer <b>></b></string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_myinfo">My Profile</string>
    <string name="about_us_content">
        TARUC Quest’s mission is to share and grow the world’s knowledge in TAR University College. A vast amount of the knowledge that
        would be valuable to many people is currently only available to a few — either locked in people’s heads,
        or only accessible to select groups. We want to connect the students who have knowledge to the people who
        need it, to bring together people with different perspectives so they can understand each other better,
        and to empower everyone to share their knowledge for the benefit of the rest of the world.
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="subject">Subject</string>
    <string name="type_something">Type something...</string>
    <string name="post_question">Post Question</string>
    <string name="category">Category</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="deactivate">Deactivate</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="student_id">Student ID</string>
    <string name="telephone_no">Telephone No</string>
    <string name="reply">Reply</string>

    <string name="dialog_title_guest">Proceed Guest</string>
    <string name="dialog_loginGuest">Login as guest</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="insert_answer_url">http://xoulzeater.esy.es/assignment/insert_answer.php</string>
    <string name="insert_favourite_url">http://xoulzeater.esy.es/assignment/insert_favourite.php</string>
    <string name="insert_question_url">http://xoulzeater.esy.es/assignment/insert_question.php</string>
    <string name="insert_student_url">http://xoulzeater.esy.es/assignment/insert_student.php</string>
    <string name="select_answer_url">http://xoulzeater.esy.es/assignment/select_answer.php</string>
    <string name="select_favourite_url">http://xoulzeater.esy.es/assignment/select_favourite.php</string>
    <string name="select_question_url">http://xoulzeater.esy.es/assignment/select_question.php</string>
    <string name="select_one_question_url">http://xoulzeater.esy.es/assignment/select_one_question.php</string>
    <string name="select_student_url">http://xoulzeater.esy.es/assignment/select_student.php</string>
    <string name="update_question_url">http://xoulzeater.esy.es/assignment/update_question.php</string>
    <string name="update_student_url">http://xoulzeater.esy.es/assignment/update_student.php</string>
    <string name="validate_student">http://xoulzeater.esy.es/assignment/validate_student.php</string>
    <string name="count_answer">http://xoulzeater.esy.es/assignment/count_answer.php</string>
    <string name="answer2">ANSWER</string>
</resources>
