<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.assignment.SettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1" />

        <Button
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/colorButtonDarkBlue"
            android:textStyle="bold"
            android:textSize="18dp"
            android:id="@+id/change_password_button"
            android:onClick=""/>
    </LinearLayout>



        <TextView
            android:text="@string/about_us"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_us_title" />

        <TextView
            android:text="@string/about_us_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_us_content"/>

        <TextView
            android:text="Version 1.5.0"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/version"
            android:layout_weight="1" />

        <Button
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:background="@color/colorButtonBlue"
            android:textColor="@android:color/white"
            android:id="@+id/logout_button"
            android:onClick="logout"/>

    </LinearLayout>
</RelativeLayout>
